--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -4,7 +4,7 @@ avatar: /static/images/avatar.png
 occupation: Software Engineer
 email: mnebongo@gmail.com
 twitter: https://x.com/MosakaNebongo
-linkedin: https://www.linkedin.com/in/nebongo-douglas-8a1b77148
+linkedin: www.linkedin.com/in/douglas-nebongo-8a1b77148
 github: https://github.com/DouglasNebongo
 ---
 
